--- a/src/pages/agregarItem/agregarItem.html
+++ b/src/pages/agregarItem/agregarItem.html
@@ -18,11 +18,11 @@
         <aside class="sidebar">
             <h1>Inventory</h1>
             <nav>
-                <a href="/src/pages/dashboard/dashboard.html"><i class="icon-dashboard"></i>Dashboard</a>
-                <a href="/src/pages/inventario/inventario.html"><i class="icon-inventory"></i>Ver Inventario</a>
-                <a href="/src/pages/agregarItem/agregarItem.html"><i class="icon-add"></i>Añadir Items</a>
-                <a href="/src/pages/ayuda/ayuda.html"><i class="icon-help"></i>Ayuda</a>
-                <a href="/src/pages/configuracion/configuracion.html"><i class="icon-settings"></i>Configuración</a>
+                <a href="/src/pages/dashboard/dashboard.html" class="active"><i class="icon-dashboard"><img class="icons" src="/src/assets/circle-gauge.png" alt="icon dashboard"></i>Dashboard</a>
+                <a href="/src/pages/inventario/inventario.html"><i class="icon-inventory"><img class="icons" src="/src/assets/notepad-text.png" alt="icon inventario"></i>Ver Inventario</a>
+                <a href="/src/pages/agregarItem/agregarItem.html"><i class="icon-add"><img class="icons" src="/src/assets/package-plus.png" alt="icon agregar"></i>Añadir Items</a>
+                <a href="/src/pages/ayuda/ayuda.html"><i class="icon-help"><img class="icons" src="/src/assets/circle-help.png" alt="icon help"></i>Ayuda</a>
+                <a href="/src/pages/configuracion/configuracion.html"><i class="icon-settings"><img class="icons" src="/src/assets/monitor-cog.png" alt="icon configuración"></i>Configuración</a>
             </nav>
         </aside>
 
