cambio,inventario,style_inventario,style_dashboard

--- a/src/pages/inventario/inventario.html
+++ b/src/pages/inventario/inventario.html
@@ -25,7 +25,41 @@
     </aside>
 
     <main class="main-content">
-        
+        <button class="btn">Ver inventario completo</button>
+        <div class="table-container">
+            <h2>VER INVENTARIO</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Categoría</th>
+                        <th>Cantidad</th>
+                        <th>Precio Unidad</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Manzana</td>
+                        <td>Fruta</td>
+                        <td>20</td>
+                        <td>1500</td>
+                    </tr>
+                    <tr>
+                        <td>Plátano</td>
+                        <td>Fruta</td>
+                        <td>30</td>
+                        <td>1200</td>
+                    </tr>
+                    <tr>
+                        <td>Zanahoria</td>
+                        <td>Verdura</td>
+                        <td>50</td>
+                        <td>800</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
     </main>
 
 </div>
