--- a/src/pages/ayuda/ayuda.html
+++ b/src/pages/ayuda/ayuda.html
@@ -27,7 +27,14 @@
         </aside>
 
         <main class="main-content">
-
+            <div class="content-help">
+                <h1>Para solicitar ayuda o soporte de su producto</h1>
+                <p>Contactese con nosotros por los siguientes medios:<br>
+                    <img src="/src/assets/instagram.png" alt="icon instagram"> @lospapusdevs
+                    <img src="/src/assets/phone-call.png" alt="icon phone"> 3145678996
+                    <img src="/src/assets/mail.png" alt="icon email"> lospapusdevs@gmail.com
+                </p>
+            </div>
         </main>
 
     </div>
