--- a/src/pages/inventario/inventario.html
+++ b/src/pages/inventario/inventario.html
@@ -25,9 +25,8 @@
     </aside>
 
     <main class="main-content">
-        <button class="btn">Ver inventario completo</button>
         <div class="table-container">
-            <h2>VER INVENTARIO</h2>
+            <h2>VER INVENTARIO <button class="btn">Ver inventario completo</button></h2>
             <table>
                 <thead>
                     <tr>
