--- a/src/pages/agregarItem/agregarItem.html
+++ b/src/pages/agregarItem/agregarItem.html
@@ -38,7 +38,7 @@
                         <tr>
                             <th>Nombre</th>
                             <th>Categoría</th>
-                            <th>Cantidad</th>
+                            <th>Cant/Uni</th>
                             <th>Precio Unidad</th>
                         </tr>
                     </thead>
