--- a/src/pages/agregarItem/agregarItem.html
+++ b/src/pages/agregarItem/agregarItem.html
@@ -146,7 +146,7 @@
         </main>
     </div>
     <script src="agregar.js"></script>
-    <script src="../utils/ejemplo.js"></script>
+    <script src="../utils/logic.js"></script>
 </body>
 
 </html>
